<resources>
    <string name="app_name">MyRuns</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="classname">Class</string>
    <string name="major">Major</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="hint">How did it go? Notes here.</string>

    <string name="dialog_fragment_tag_photo_picker">Photo Picker TAG</string>
    <string name="dialog_fragment_tag_duration">Duration TAG</string>
    <string name="dialog_fragment_tag_distance">Distance TAG</string>
    <string name="dialog_fragment_tag_calories">Calories TAG</string>
    <string name="dialog_fragment_tag_heart_rate">Heart Rate TAG</string>
    <string name="dialog_fragment_tag_comment">Comment TAG</string>

    <string name="ui_profile_photo_picker_title">Photo Picker</string>
    <string name="ui_manual_entry_duration_title">Duration</string>
    <string name="ui_manual_entry_distance_title">Distance</string>
    <string name="ui_manual_entry_calories_title">Calories</string>
    <string name="ui_manual_entry_heart_rate_title">Heart Rate</string>
    <string name="ui_manual_entry_comment_title">Comment</string>
    <string name="profile_photo_file_name">profile_photo.png</string>

    <string-array name="ui_profile_photo_picker_items">
        <item>Take from camera</item>
        <item>Select from gallery</item>
    </string-array>

    <string name="start">START</string>
    <string name="history">HISTORY</string>
    <string name="settings">SETTINGS</string>
    <string name="sync">SYNC</string>


    <string name="title_activity_main">MyRuns2</string>

    <string name="input_type">Input Type</string>
    <string-array name="input_type_items">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string name="activity_type">Activity Type</string>
    <string-array name="activity_type_items">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
    </string-array>

    <string-array name="unit_preference_items">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>

    <string-array name="unit_preference_item_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="title_activity_automatic">AutomaticActivity</string>


</resources>

